# knowledge-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  OBSERVATIONS.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: build.md
.claude/hooks/: post_edit_check.sh
.github/workflows/: ci.yml
app/: chunker.py  config.py  loader.py  main.py  rag.py  store.py
sample_notes/: aws-ecs-vs-eks.md  docker-basics.md  meeting-notes-2026.md  python-asyncio.md  rag-architecture.md
tests/: test_chunker.py  test_loader.py  test_rag.py
